Fix crash when dragging tab to root window

Some changes on GTK+3 after 3.10 caused the existing code to crash. A
new function which fixes the problem was added in 3.16. Use the new
gtk_notebook_detach() tab in versions after 3.16 where it's available.

See GTK+ bug: https://bugzilla.gnome.org/show_bug.cgi?id=744385

Workaround found in: https://github.com/f2404/xfce4-terminal3/commit/06eace541aa4bd93d7e5204a856467cdf76de104

Fixes #13336